# voxel-renderer

./: Cargo.toml  build.rs
shaders/: voxel.frag  voxel.vert
src/: main.rs
src/renderer/: camera.rs  mod.rs  model.rs  renderer.rs  voxel_pipeline.rs  voxel_shader.wgsl
src/voxel/: buffer.rs  mod.rs  pipeline.rs
